[gd_scene load_steps=8 format=3 uid="uid://biws6myxx57w5"]

[ext_resource type="Texture2D" uid="uid://c6abe3jdco55q" path="res://Styles/Buttons/pkmn_cooking_pot.png" id="1_fgrps"]
[ext_resource type="Script" path="res://Components/CookingPot.gd" id="1_fl5an"]

[sub_resource type="Animation" id="Animation_n7ave"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dhn72"]
resource_name = "demagnify"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_label"
}]
}

[sub_resource type="Animation" id="Animation_3pbh8"]
resource_name = "magnify"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_label"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dv6w"]
_data = {
"RESET": SubResource("Animation_n7ave"),
"demagnify": SubResource("Animation_dhn72"),
"magnify": SubResource("Animation_3pbh8")
}

[sub_resource type="LabelSettings" id="LabelSettings_kjpd5"]
font_color = Color(0.494118, 0.211765, 0.0627451, 1)

[node name="CookingPot" type="Node2D"]
position = Vector2(969, 585)
script = ExtResource("1_fl5an")

[node name="CookingPotSprite" type="TextureRect" parent="."]
offset_left = -37.0
offset_top = -37.0
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("1_fgrps")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5dv6w")
}

[node name="CookingPotLabel" type="Label" parent="."]
visible = false
top_level = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 308.0
offset_top = -132.0
offset_right = 481.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 0
text = "Cook!"
label_settings = SubResource("LabelSettings_kjpd5")
horizontal_alignment = 1

[connection signal="gui_input" from="CookingPotSprite" to="." method="_on_cooking_pot_sprite_gui_input"]
[connection signal="mouse_entered" from="CookingPotSprite" to="." method="_on_cooking_pot_sprite_mouse_entered"]
[connection signal="mouse_exited" from="CookingPotSprite" to="." method="_on_cooking_pot_sprite_mouse_exited"]
